[package]
name = "warp_subscriptions"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.6.2"
futures = { version = "=0.3.1" }
log = "0.4.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "0.2", features = ["rt-core", "macros"] }
warp = "0.2.1"

# TODO#433: get crates from GitHub
juniper = { path = "../../juniper" }
juniper_subscriptions = { path = "../../juniper_subscriptions"}
juniper_warp = { path = "../../juniper_warp", features = ["subscriptions"] }
redis = { git = "https://github.com/mitsuhiko/redis-rs" }
# r2d2_redis = { git = "https://github.com/Togedo/r2d2-redis" }
async-stream = "0.2.1"
r2d2 = "0.8.8"
async-trait = "0.1.24"
mobc-redis = { git = "https://github.com/Togedo/mobc-redis" }
mobc = "0.5.4"
lazy_static = "1.4.0"
